examples/tests/enum_errors.ore
/*
    Stage E.3 — enum error cases. Each top-level decl below should
    produce exactly one diagnostic.
*/

Color :: enum
    Red
    Green
    Blue

// error: no variant 'Yellow'
bad_variant_qualified :: fn() -> Color
    Color.Yellow

// error: enum literal '.Red' requires an enum-typed context
bad_dot_no_context :: .Red

// error: no variant 'Yellow' in Color
bad_variant_bare :: fn() -> Color
    .Yellow
